--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 
 		
 
-		<link rel="modulepreload" href="/code-cross-review/_app/start-414329a6.js">
+		<link rel="modulepreload" href="/code-cross-review/_app/start-c76532bb.js">
 		<link rel="modulepreload" href="/code-cross-review/_app/chunks/vendor-874d265a.js">
 		<link rel="modulepreload" href="/code-cross-review/_app/layout.svelte-6bc4cf6c.js">
-		<link rel="modulepreload" href="/code-cross-review/_app/pages/index.svelte-bd9a880c.js">
+		<link rel="modulepreload" href="/code-cross-review/_app/pages/index.svelte-ca67d444.js">
 		<link rel="stylesheet" href="/code-cross-review/_app/assets/start-a8cd1609.css">
 		<link rel="stylesheet" href="/code-cross-review/_app/assets/vendor-f990add9.css">
-		<link rel="stylesheet" href="/code-cross-review/_app/assets/pages/index.svelte-226f95da.css">
+		<link rel="stylesheet" href="/code-cross-review/_app/assets/pages/index.svelte-7e3cbf71.css">
 
 		<script type="module">
-			import { start } from "/code-cross-review/_app/start-414329a6.js";
+			import { start } from "/code-cross-review/_app/start-c76532bb.js";
 			start({
 				target: document.body,
 				paths: {"base":"/code-cross-review","assets":"/code-cross-review"},
@@ -37,7 +37,7 @@
 					error: null,
 					nodes: [
 						import("/code-cross-review/_app/layout.svelte-6bc4cf6c.js"),
-						import("/code-cross-review/_app/pages/index.svelte-bd9a880c.js")
+						import("/code-cross-review/_app/pages/index.svelte-ca67d444.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
@@ -129,29 +129,29 @@
 </div>
 </span>?
   </h1>
-  <div class="pairs  svelte-c1xe7s"><div class="pair  svelte-1abzffh"><svg class="pin svelte-1abzffh" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
-  <div class="whom svelte-1abzffh"><span class="whomName svelte-1abzffh">Макриди Екатерина</span>
-    <span class="arrow svelte-1abzffh"></span></div>
+  <div class="pairs  svelte-c1xe7s"><div class="pair  svelte-zlpy6h"><svg class="pin svelte-zlpy6h" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
+  <div class="whom svelte-zlpy6h"><span class="whomName svelte-zlpy6h">Макриди Екатерина</span>
+    <span class="arrow svelte-zlpy6h"></span></div>
   <div>Хрустик Михаил</div>
-</div><div class="pair  svelte-1abzffh"><svg class="pin svelte-1abzffh" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
-  <div class="whom svelte-1abzffh"><span class="whomName svelte-1abzffh">Туичиев Алексей</span>
-    <span class="arrow svelte-1abzffh"></span></div>
+</div><div class="pair  svelte-zlpy6h"><svg class="pin svelte-zlpy6h" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
+  <div class="whom svelte-zlpy6h"><span class="whomName svelte-zlpy6h">Туичиев Алексей</span>
+    <span class="arrow svelte-zlpy6h"></span></div>
   <div>Орлов Максим</div>
-</div><div class="pair  svelte-1abzffh"><svg class="pin svelte-1abzffh" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
-  <div class="whom svelte-1abzffh"><span class="whomName svelte-1abzffh">Колодько Денис</span>
-    <span class="arrow svelte-1abzffh"></span></div>
+</div><div class="pair  svelte-zlpy6h"><svg class="pin svelte-zlpy6h" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
+  <div class="whom svelte-zlpy6h"><span class="whomName svelte-zlpy6h">Колодько Денис</span>
+    <span class="arrow svelte-zlpy6h"></span></div>
   <div>Александр Плаксенко</div>
-</div><div class="pair  svelte-1abzffh"><svg class="pin svelte-1abzffh" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
-  <div class="whom svelte-1abzffh"><span class="whomName svelte-1abzffh">Хрустик Михаил</span>
-    <span class="arrow svelte-1abzffh"></span></div>
+</div><div class="pair  svelte-zlpy6h"><svg class="pin svelte-zlpy6h" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
+  <div class="whom svelte-zlpy6h"><span class="whomName svelte-zlpy6h">Хрустик Михаил</span>
+    <span class="arrow svelte-zlpy6h"></span></div>
   <div>Макриди Екатерина</div>
-</div><div class="pair  svelte-1abzffh"><svg class="pin svelte-1abzffh" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
-  <div class="whom svelte-1abzffh"><span class="whomName svelte-1abzffh">Орлов Максим</span>
-    <span class="arrow svelte-1abzffh"></span></div>
+</div><div class="pair  svelte-zlpy6h"><svg class="pin svelte-zlpy6h" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
+  <div class="whom svelte-zlpy6h"><span class="whomName svelte-zlpy6h">Орлов Максим</span>
+    <span class="arrow svelte-zlpy6h"></span></div>
   <div>Туичиев Алексей</div>
-</div><div class="pair  svelte-1abzffh"><svg class="pin svelte-1abzffh" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
-  <div class="whom svelte-1abzffh"><span class="whomName svelte-1abzffh">Александр Плаксенко</span>
-    <span class="arrow svelte-1abzffh"></span></div>
+</div><div class="pair  svelte-zlpy6h"><svg class="pin svelte-zlpy6h" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
+  <div class="whom svelte-zlpy6h"><span class="whomName svelte-zlpy6h">Александр Плаксенко</span>
+    <span class="arrow svelte-zlpy6h"></span></div>
   <div>Колодько Денис</div>
 </div></div>
 </main>
