deploy: 76e5d4970535e03cb114d70e6548f46cc26e03c9

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 
 		
 
-		<link rel="modulepreload" href="/code-cross-review/_app/start-c76532bb.js">
+		<link rel="modulepreload" href="/code-cross-review/_app/start-4842e351.js">
 		<link rel="modulepreload" href="/code-cross-review/_app/chunks/vendor-874d265a.js">
 		<link rel="modulepreload" href="/code-cross-review/_app/layout.svelte-6bc4cf6c.js">
-		<link rel="modulepreload" href="/code-cross-review/_app/pages/index.svelte-ca67d444.js">
+		<link rel="modulepreload" href="/code-cross-review/_app/pages/index.svelte-7e84b4c6.js">
 		<link rel="stylesheet" href="/code-cross-review/_app/assets/start-a8cd1609.css">
 		<link rel="stylesheet" href="/code-cross-review/_app/assets/vendor-f990add9.css">
-		<link rel="stylesheet" href="/code-cross-review/_app/assets/pages/index.svelte-7e3cbf71.css">
+		<link rel="stylesheet" href="/code-cross-review/_app/assets/pages/index.svelte-4dd7aedb.css">
 
 		<script type="module">
-			import { start } from "/code-cross-review/_app/start-c76532bb.js";
+			import { start } from "/code-cross-review/_app/start-4842e351.js";
 			start({
 				target: document.body,
 				paths: {"base":"/code-cross-review","assets":"/code-cross-review"},
@@ -37,7 +37,7 @@
 					error: null,
 					nodes: [
 						import("/code-cross-review/_app/layout.svelte-6bc4cf6c.js"),
-						import("/code-cross-review/_app/pages/index.svelte-ca67d444.js")
+						import("/code-cross-review/_app/pages/index.svelte-7e84b4c6.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
@@ -54,7 +54,7 @@
   <div id="svelte">
 
 
-<main class="svelte-c1xe7s"><h1 class="svelte-c1xe7s">На кого асайнить мержи
+<main class="svelte-1f7tk5u"><h1 class="svelte-1f7tk5u">На кого асайнить мержи
     <span class="svelte-1p5z8n1"><div class="datepicker svelte-1lorc63" style="\n    --button-background-color: #fff;\n    --button-border-color: #eee;\n    --button-text-color: #333;\n    --highlight-color: #f7901e;\n    --day-background-color: none;\n    --day-text-color: #4a4a4a;\n    --day-highlighted-background-color: #efefef;\n    --day-highlighted-text-color: #4a4a4a;\n    \n  ">
 <div class="sc-popover svelte-mc1z8c"><div class="trigger"><div slot="trigger" class="svelte-1lorc63"><button class="svelte-1p5z8n1">сегодня</button></div></div>
   <div class="contents-wrapper svelte-mc1z8c" style="transform: translate(-50%,-50%) translate(0px, 0px)"><div class="contents svelte-mc1z8c"><div class="contents-inner svelte-mc1z8c"><div slot="contents" class="svelte-1lorc63"><div class="calendar svelte-1lorc63"><div class="title"><div class="heading-section svelte-1dqf106"><div class="control svelte-1dqf106"><i class="arrow left svelte-1dqf106"></i></div>
@@ -129,7 +129,7 @@
 </div>
 </span>?
   </h1>
-  <div class="pairs  svelte-c1xe7s"><div class="pair  svelte-zlpy6h"><svg class="pin svelte-zlpy6h" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
+  <div class="pairs  svelte-1f7tk5u"><div class="pair  svelte-zlpy6h"><svg class="pin svelte-zlpy6h" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
   <div class="whom svelte-zlpy6h"><span class="whomName svelte-zlpy6h">Макриди Екатерина</span>
     <span class="arrow svelte-zlpy6h"></span></div>
   <div>Хрустик Михаил</div>
