deploy: e56fd38f0b1782436a2239f6fbe55f0ae0a71ac3

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 
 		
 
-		<link rel="modulepreload" href="/code-cross-review/_app/start-305573f8.js">
-		<link rel="modulepreload" href="/code-cross-review/_app/chunks/vendor-874d265a.js">
-		<link rel="modulepreload" href="/code-cross-review/_app/layout.svelte-6bc4cf6c.js">
-		<link rel="modulepreload" href="/code-cross-review/_app/pages/index.svelte-da851d3b.js">
-		<link rel="stylesheet" href="/code-cross-review/_app/assets/start-a8cd1609.css">
-		<link rel="stylesheet" href="/code-cross-review/_app/assets/vendor-f990add9.css">
-		<link rel="stylesheet" href="/code-cross-review/_app/assets/pages/index.svelte-4dd7aedb.css">
+		<link rel="modulepreload" href="/code-cross-review/_app/start-494b0c26.js">
+		<link rel="modulepreload" href="/code-cross-review/_app/chunks/vendor-3fa2ce56.js">
+		<link rel="modulepreload" href="/code-cross-review/_app/layout.svelte-7130791f.js">
+		<link rel="modulepreload" href="/code-cross-review/_app/pages/index.svelte-26b60e76.js">
+		<link rel="stylesheet" href="/code-cross-review/_app/assets/start-61d1577b.css">
+		<link rel="stylesheet" href="/code-cross-review/_app/assets/vendor-000f60aa.css">
+		<link rel="stylesheet" href="/code-cross-review/_app/assets/pages/index.svelte-a7371929.css">
 
 		<script type="module">
-			import { start } from "/code-cross-review/_app/start-305573f8.js";
+			import { start } from "/code-cross-review/_app/start-494b0c26.js";
 			start({
 				target: document.body,
 				paths: {"base":"/code-cross-review","assets":"/code-cross-review"},
@@ -36,8 +36,8 @@
 					status: 200,
 					error: null,
 					nodes: [
-						import("/code-cross-review/_app/layout.svelte-6bc4cf6c.js"),
-						import("/code-cross-review/_app/pages/index.svelte-da851d3b.js")
+						import("/code-cross-review/_app/layout.svelte-7130791f.js"),
+						import("/code-cross-review/_app/pages/index.svelte-26b60e76.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
@@ -96,19 +96,19 @@
     </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">17</button>
     </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">18</button>
     </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">19</button>
-    </div><div class="day svelte-1f2gkwh  is-today"><button class="day--label svelte-1f2gkwh selected highlighted" type="button">20</button>
-    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">21</button>
+    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">20</button>
+    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">21</button>
     </div>
-</div><div class="week svelte-1f2gkwh"><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">22</button>
-    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">23</button>
-    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">24</button>
-    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">25</button>
-    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">26</button>
-    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">27</button>
-    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">28</button>
+</div><div class="week svelte-1f2gkwh"><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">22</button>
+    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">23</button>
+    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">24</button>
+    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">25</button>
+    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">26</button>
+    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">27</button>
+    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">28</button>
     </div>
-</div><div class="week svelte-1f2gkwh"><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">29</button>
-    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">30</button>
+</div><div class="week svelte-1f2gkwh"><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">29</button>
+    </div><div class="day svelte-1f2gkwh  is-today"><button class="day--label svelte-1f2gkwh selected highlighted" type="button">30</button>
     </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">31</button>
     </div><div class="day svelte-1f2gkwh outside-month"><button class="day--label svelte-1f2gkwh" type="button">1</button>
     </div><div class="day svelte-1f2gkwh outside-month"><button class="day--label svelte-1f2gkwh" type="button">2</button>
