--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <meta http-equiv="content-security-policy" content="">
 	<link rel="stylesheet" href="/_app/assets/vendor-d0a5a38b.css">
 	<link rel="stylesheet" href="/_app/assets/pages/index.svelte-5c59e076.css">
-	<link rel="modulepreload" href="/_app/start-8b93939d.js">
+	<link rel="modulepreload" href="/_app/start-f8dff316.js">
 	<link rel="modulepreload" href="/_app/chunks/vendor-f5667196.js">
 	<link rel="modulepreload" href="/_app/layout.svelte-b028ef06.js">
-	<link rel="modulepreload" href="/_app/pages/index.svelte-aeba8bc4.js">
+	<link rel="modulepreload" href="/_app/pages/index.svelte-4d818106.js">
 </head>
 
 <body>
@@ -61,8 +61,8 @@
     </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">9</button>
     </div>
 </div><div class="week svelte-1f2gkwh"><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">10</button>
-    </div><div class="day svelte-1f2gkwh  is-today"><button class="day--label svelte-1f2gkwh selected highlighted" type="button">11</button>
-    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">12</button>
+    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">11</button>
+    </div><div class="day svelte-1f2gkwh  is-today"><button class="day--label svelte-1f2gkwh selected highlighted" type="button">12</button>
     </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">13</button>
     </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">14</button>
     </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">15</button>
@@ -101,7 +101,7 @@
   <div class="pairs  svelte-1f7tk5u"><div class="pair  svelte-zlpy6h"><svg class="pin svelte-zlpy6h" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
   <div class="whom svelte-zlpy6h"><span class="whomName svelte-zlpy6h">Александр Плаксенко</span>
     <span class="arrow svelte-zlpy6h"></span></div>
-  <div>Орлов Максим</div>
+  <div>Макриди Екатерина</div>
 </div><div class="pair  svelte-zlpy6h"><svg class="pin svelte-zlpy6h" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
   <div class="whom svelte-zlpy6h"><span class="whomName svelte-zlpy6h">Колодько Денис</span>
     <span class="arrow svelte-zlpy6h"></span></div>
@@ -111,25 +111,21 @@
     <span class="arrow svelte-zlpy6h"></span></div>
   <div>Хрустик Михаил</div>
 </div><div class="pair  svelte-zlpy6h"><svg class="pin svelte-zlpy6h" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
-  <div class="whom svelte-zlpy6h"><span class="whomName svelte-zlpy6h">Орлов Максим</span>
+  <div class="whom svelte-zlpy6h"><span class="whomName svelte-zlpy6h">Туичиев Алексей</span>
     <span class="arrow svelte-zlpy6h"></span></div>
   <div>Александр Плаксенко</div>
 </div><div class="pair  svelte-zlpy6h"><svg class="pin svelte-zlpy6h" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
-  <div class="whom svelte-zlpy6h"><span class="whomName svelte-zlpy6h">Туичиев Алексей</span>
-    <span class="arrow svelte-zlpy6h"></span></div>
-  <div>Колодько Денис</div>
-</div><div class="pair  svelte-zlpy6h"><svg class="pin svelte-zlpy6h" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
   <div class="whom svelte-zlpy6h"><span class="whomName svelte-zlpy6h">Хрустик Михаил</span>
     <span class="arrow svelte-zlpy6h"></span></div>
-  <div>Макриди Екатерина</div>
+  <div>Колодько Денис</div>
 </div></div>
 </main>
 
 
-		<script type="module" data-hydrate="nwts8d">
-		import { start } from "/_app/start-8b93939d.js";
+		<script type="module" data-hydrate="yc5t01">
+		import { start } from "/_app/start-f8dff316.js";
 		start({
-			target: document.querySelector('[data-hydrate="nwts8d"]').parentNode,
+			target: document.querySelector('[data-hydrate="yc5t01"]').parentNode,
 			paths: {"base":"","assets":""},
 			session: {},
 			route: true,
@@ -140,7 +136,7 @@
 				error: null,
 				nodes: [
 					import("/_app/layout.svelte-b028ef06.js"),
-						import("/_app/pages/index.svelte-aeba8bc4.js")
+						import("/_app/pages/index.svelte-4d818106.js")
 				],
 				params: {}
 			}
