--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <meta http-equiv="content-security-policy" content="">
 	<link rel="stylesheet" href="/_app/assets/vendor-d0a5a38b.css">
 	<link rel="stylesheet" href="/_app/assets/pages/index.svelte-5c59e076.css">
-	<link rel="modulepreload" href="/_app/start-151f751b.js">
+	<link rel="modulepreload" href="/_app/start-522872a6.js">
 	<link rel="modulepreload" href="/_app/chunks/vendor-f5667196.js">
 	<link rel="modulepreload" href="/_app/layout.svelte-b028ef06.js">
-	<link rel="modulepreload" href="/_app/pages/index.svelte-528b1e35.js">
+	<link rel="modulepreload" href="/_app/pages/index.svelte-10b1ea0c.js">
 </head>
 
 <body>
@@ -103,9 +103,21 @@
     <span class="arrow svelte-zlpy6h"></span></div>
   <div>Хрустик Михаил</div>
 </div><div class="pair  svelte-zlpy6h"><svg class="pin svelte-zlpy6h" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
-  <div class="whom svelte-zlpy6h"><span class="whomName svelte-zlpy6h">Туичиев Алексей</span>
+  <div class="whom svelte-zlpy6h"><span class="whomName svelte-zlpy6h">Колодько Денис</span>
     <span class="arrow svelte-zlpy6h"></span></div>
   <div>Александр Плаксенко</div>
+</div><div class="pair  svelte-zlpy6h"><svg class="pin svelte-zlpy6h" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
+  <div class="whom svelte-zlpy6h"><span class="whomName svelte-zlpy6h">Макриди Екатерина</span>
+    <span class="arrow svelte-zlpy6h"></span></div>
+  <div>Колодько Денис</div>
+</div><div class="pair  svelte-zlpy6h"><svg class="pin svelte-zlpy6h" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
+  <div class="whom svelte-zlpy6h"><span class="whomName svelte-zlpy6h">Орлов Максим</span>
+    <span class="arrow svelte-zlpy6h"></span></div>
+  <div>Макриди Екатерина</div>
+</div><div class="pair  svelte-zlpy6h"><svg class="pin svelte-zlpy6h" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
+  <div class="whom svelte-zlpy6h"><span class="whomName svelte-zlpy6h">Туичиев Алексей</span>
+    <span class="arrow svelte-zlpy6h"></span></div>
+  <div>Орлов Максим</div>
 </div><div class="pair  svelte-zlpy6h"><svg class="pin svelte-zlpy6h" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
   <div class="whom svelte-zlpy6h"><span class="whomName svelte-zlpy6h">Хрустик Михаил</span>
     <span class="arrow svelte-zlpy6h"></span></div>
@@ -114,10 +126,10 @@
 </main>
 
 
-		<script type="module" data-hydrate="rw6jmi">
-		import { start } from "/_app/start-151f751b.js";
+		<script type="module" data-hydrate="1e14ldd">
+		import { start } from "/_app/start-522872a6.js";
 		start({
-			target: document.querySelector('[data-hydrate="rw6jmi"]').parentNode,
+			target: document.querySelector('[data-hydrate="1e14ldd"]').parentNode,
 			paths: {"base":"","assets":""},
 			session: {},
 			route: true,
@@ -128,7 +140,7 @@
 				error: null,
 				nodes: [
 					import("/_app/layout.svelte-b028ef06.js"),
-						import("/_app/pages/index.svelte-528b1e35.js")
+						import("/_app/pages/index.svelte-10b1ea0c.js")
 				],
 				params: {}
 			}
