deploy: fa717d0e992f4024d40363f4c4175324295f9ec7

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta http-equiv="content-security-policy" content="">
 	<link rel="stylesheet" href="/_app/assets/vendor-d0a5a38b.css">
 	<link rel="stylesheet" href="/_app/assets/pages/index.svelte-5c59e076.css">
-	<link rel="modulepreload" href="/_app/start-3175c3e1.js">
+	<link rel="modulepreload" href="/_app/start-0d09163e.js">
 	<link rel="modulepreload" href="/_app/chunks/vendor-f5667196.js">
 	<link rel="modulepreload" href="/_app/layout.svelte-b028ef06.js">
 	<link rel="modulepreload" href="/_app/pages/index.svelte-4f76b36a.js">
@@ -49,11 +49,11 @@
     </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">2</button>
     </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">3</button>
     </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">4</button>
-    </div><div class="day svelte-1f2gkwh  is-today"><button class="day--label svelte-1f2gkwh selected highlighted" type="button">5</button>
-    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">6</button>
+    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">5</button>
+    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">6</button>
     </div>
-</div><div class="week svelte-1f2gkwh"><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">7</button>
-    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">8</button>
+</div><div class="week svelte-1f2gkwh"><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">7</button>
+    </div><div class="day svelte-1f2gkwh  is-today"><button class="day--label svelte-1f2gkwh selected highlighted" type="button">8</button>
     </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">9</button>
     </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">10</button>
     </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">11</button>
@@ -118,10 +118,10 @@
 </main>
 
 
-		<script type="module" data-hydrate="z47kg7">
-		import { start } from "/_app/start-3175c3e1.js";
+		<script type="module" data-hydrate="ix7kxc">
+		import { start } from "/_app/start-0d09163e.js";
 		start({
-			target: document.querySelector('[data-hydrate="z47kg7"]').parentNode,
+			target: document.querySelector('[data-hydrate="ix7kxc"]').parentNode,
 			paths: {"base":"","assets":""},
 			session: {},
 			route: true,
