deploy: 2744afb5897db8ecd9776fd5bcc15340a1f32727

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta http-equiv="content-security-policy" content="">
 	<link rel="stylesheet" href="/_app/assets/vendor-d0a5a38b.css">
 	<link rel="stylesheet" href="/_app/assets/pages/index.svelte-5c59e076.css">
-	<link rel="modulepreload" href="/_app/start-f2fb89f0.js">
+	<link rel="modulepreload" href="/_app/start-d4ccaa93.js">
 	<link rel="modulepreload" href="/_app/chunks/vendor-f5667196.js">
 	<link rel="modulepreload" href="/_app/layout.svelte-b028ef06.js">
 	<link rel="modulepreload" href="/_app/pages/index.svelte-998a5151.js">
@@ -55,9 +55,9 @@
 </div><div class="week svelte-1f2gkwh"><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">6</button>
     </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">7</button>
     </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">8</button>
-    </div><div class="day svelte-1f2gkwh  is-today"><button class="day--label svelte-1f2gkwh selected highlighted" type="button">9</button>
-    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">10</button>
-    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">11</button>
+    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">9</button>
+    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">10</button>
+    </div><div class="day svelte-1f2gkwh  is-today"><button class="day--label svelte-1f2gkwh selected highlighted" type="button">11</button>
     </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">12</button>
     </div>
 </div><div class="week svelte-1f2gkwh"><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">13</button>
@@ -114,10 +114,10 @@
 </main>
 
 
-		<script type="module" data-hydrate="1l1m9nf">
-		import { start } from "/_app/start-f2fb89f0.js";
+		<script type="module" data-hydrate="1spcgl7">
+		import { start } from "/_app/start-d4ccaa93.js";
 		start({
-			target: document.querySelector('[data-hydrate="1l1m9nf"]').parentNode,
+			target: document.querySelector('[data-hydrate="1spcgl7"]').parentNode,
 			paths: {"base":"","assets":""},
 			session: {},
 			route: true,
